--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,6 +17,7 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_motionFragment"
-            app:destination="@id/motionFragment" />
+            app:destination="@id/motionFragment"
+            />
     </fragment>
 </navigation>
