--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/motionFragment"
-        android:name="com.ilkeruzer.rapsodotask.MotionFragment"
+        android:name="com.ilkeruzer.rapsodotask.ui.motion.MotionFragment"
         android:label="fragment_motion"
         tools:layout="@layout/fragment_motion" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.ilkeruzer.rapsodotask.HomeFragment"
+        android:name="com.ilkeruzer.rapsodotask.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
