--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,22 +6,26 @@
     app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/motionFragment"
-        android:name="com.ilkeruzer.rapsodotask.ui.motion.MotionFragment"
-        android:label="fragment_motion"
-        tools:layout="@layout/fragment_motion" />
-    <fragment
         android:id="@+id/homeFragment"
         android:name="com.ilkeruzer.rapsodotask.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
+
         <action
             android:id="@+id/action_homeFragment_to_motionFragment"
-            app:destination="@id/motionFragment">
-            <argument
-                android:name="isNew"
-                app:argType="boolean"
-                android:defaultValue="false" />
-        </action>
+            app:destination="@id/motionFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/motionFragment"
+        android:name="com.ilkeruzer.rapsodotask.ui.motion.MotionFragment"
+        android:label="fragment_motion"
+        tools:layout="@layout/fragment_motion" >
+
+        <argument
+            android:name="motion"
+            app:argType="com.ilkeruzer.rapsodotask.data.local.model.MotionEntity"
+            app:nullable="true" />
+    </fragment>
+
 </navigation>
